syntax  = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/AnkitNayan83/houseBank/pb";

message UpdateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string full_name = 4;
    google.protobuf.Timestamp email_verified_at = 5;
    google.protobuf.Timestamp password_changed_at = 6;
}

message UpdateUserResponse {
    User user = 1;
}